# xolsh

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  baseline.csv  cabal.project  flake.nix  package.yaml  stack.yaml  xolsh.cabal
.github/workflows/: ci.yml  linting.yml  web.yml
.helix/: languages.toml
app/: CmdlineOptions.hs  Main.hs  Scanner.hs  Token.hs
bench/: Bench.hs  Programs.hs
loxexamples/: ch10.lox  ch12.lox  instances.lox  parsetest.lox  sums.lox  test.lox
src/: AstPrinter.hs  Diagnostics.hs  Environment.hs  Environment.hs-boot  Error.hs  Error.hs-boot  Expr.hs  Expr.hs-boot  Interpreter.hs  Optimizer.hs  Parser.hs  Resolver.hs  Run.hs  Scanner.hs  Stmt.hs  Test.hs  Token.hs  TokenType.hs
test/: Spec.hs  ch10.lox  ch12.lox  ch13.lox  test.lox
web/: CHANGELOG.md  LICENSE  build.sh  package-lock.json  package.json  xolsh-web.cabal  xolsh-web.wasm
web/app/: Main.hs
web/src/: editorconf.js  index.js  loxexample.js
web/static/: index.html  style.css  xterm.html
