cabal-version: 3.4
name: xolsh
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/0rphee/xolsh#readme>
author: 0rphee
maintainer: 0rph3e@proton.me
copyright: 2023 0rphee
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with: ghc ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

common common-deps
  build-depends:
    base >=4.7 && <5

common common-options
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -fprint-potential-instances
    -Wno-unticked-promoted-constructors
    -flate-specialise
    -funbox-strict-fields
    -fexpose-all-unfoldings
    -Wunused-packages

  default-extensions:
    OverloadedStrings

library
  import:
    , common-deps
    , common-options

  hs-source-dirs:
    src

  exposed-modules:
    AstPrinter
    Environment
    Error
    Expr
    Interpreter
    Parser
    Resolver
    Scanner
    Stmt
    TokenType

  build-depends:
    -- Control.Monad.RWS.CPS available until 2.3.0 (mtl)
    -- Control.Monad.Trans.Except.finallyE available until 0.6.0.0 (transformers)
    bytestring,
    containers,
    mtl >=2.3.1,
    time,
    transformers >=0.6.0.0,
    vector,
    vector-builder,

executable xolsh-exe
  import:
    , common-deps
    , common-options

  -- !arch(wasm32) || !os(wasi)
  ghc-options:

  if arch(wasm32)
    ghc-options:
      -O2
      -single-threaded
  else
    ghc-options:
      -threaded
      -with-rtsopts=-N

  hs-source-dirs:
    app

  main-is: Main.hs
  other-modules:
    CmdlineOptions
    Paths_xolsh

  default-extensions:
    RecordWildCards

  build-depends:
    bytestring,
    mtl,
    optparse-applicative,
    xolsh,

benchmark xolsh-bench
  import:
    common-options,
    common-deps

  type: exitcode-stdio-1.0
  hs-source-dirs:
    bench

  main-is: Bench.hs
  other-modules:
    Paths_xolsh

  build-depends:
    bytestring,
    silently,
    string-interpolate >=0.3.0.0,
    tasty,
    tasty-bench,
    xolsh,
