cabal-version: 3.4
name: xolsh
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/0rphee/xolsh#readme>
author: 0rphee
maintainer: 0rph3e@proton.me
copyright: 2023 0rphee
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with: ghc ==9.6.5 || ==9.8.2 || ==9.10.1

flag memory-profiling
  description: Turn on GHC and RTS options for memory profiling.
  default: False
  manual: True

common common-deps
  build-depends:
    base >=4.7 && <5

common common-options
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -fprint-potential-instances
    -Wno-unticked-promoted-constructors
    -flate-specialise
    -funbox-strict-fields
    -fexpose-all-unfoldings
    -Wunused-packages

  default-extensions:
    OverloadedStrings

library
  import:
    , common-deps
    , common-options

  if flag(memory-profiling)
    ghc-options:
      -finfo-table-map
  hs-source-dirs:
    src

  exposed-modules:
    AstPrinter
    Environment
    Error
    Expr
    Interpreter
    Optimizer
    Parser
    Resolver
    Run
    Scanner
    Stmt
    TokenType

  build-depends:
    -- Control.Monad.RWS.CPS available until 2.3.0 (mtl)
    -- Control.Monad.Trans.Except.finallyE available until 0.6.0.0 (transformers)
    -- mtl >=2.3.1,
    -- transformers >=0.6.0.0,
    bluefin,
    bytestring,
    containers,
    template-haskell,
    time,
    vector,
    vector-builder,

executable xolsh-exe
  import:
    , common-deps
    , common-options

  -- !arch(wasm32) || !os(wasi)
  ghc-options:

  if arch(wasm32)
    ghc-options:
      -O2
      -single-threaded
  else
    ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

  if flag(memory-profiling)
    ghc-options:
      -finfo-table-map
      -fprof-auto
  hs-source-dirs:
    app

  main-is: Main.hs
  other-modules:
    CmdlineOptions
    Paths_xolsh

  default-extensions:
    RecordWildCards

  build-depends:
    -- mtl,
    bluefin >=0.2.3 && <1,
    bytestring,
    optparse-applicative,
    xolsh,

benchmark xolsh-bench
  import:
    common-options,
    common-deps

  type: exitcode-stdio-1.0
  hs-source-dirs:
    bench

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  main-is: Bench.hs
  other-modules:
    Paths_xolsh
    Programs

  build-depends:
    bytestring,
    process,
    silently,
    string-interpolate >=0.3.0.0,
    tasty,
    tasty-bench,
    template-haskell,
    th-lift-instances,
    vector,
    xolsh,
